--- a/cs109a-Final-Project.ipynb
+++ b/cs109a-Final-Project.ipynb
@@ -241,19 +241,19 @@
     "- `liveness`: Detects the presence of an audience in the recording. Higher liveness values represent an increased probability that the track was performed live. A value above 0.8 provides strong likelihood that the track is live. \n",
     "- `valence`: A measure from 0.0 to 1.0 describing the musical positiveness conveyed by a track. Tracks with high valence sound more positive (e.g. happy, cheerful, euphoric), while tracks with low valence sound more negative (e.g. sad, depressed, angry).\n",
     "- `tempo`: The overall estimated tempo of a track in beats per minute (BPM). In musical terminology, tempo is the speed or pace of a given piece and derives directly from the average beat duration. \n",
-    "- `duration\\_ms`: The duration of the track in milliseconds.\n",
-    "- `time\\_signature`: An estimated overall time signature of a track. The time signature (meter) is a notational convention to specify how many beats are in each bar (or measure).\n",
+    "- `duration_ms`: The duration of the track in milliseconds.\n",
+    "- `time_signature`: An estimated overall time signature of a track. The time signature (meter) is a notational convention to specify how many beats are in each bar (or measure).\n",
     "- `popularity`: The popularity of a track is a value between 0 and 100, with 100 being the most popular. The popularity is calculated by algorithm and is based, in the most part, on the total number of plays the track has had and how recent those plays are.Generally speaking, songs that are being played a lot now will have a higher popularity than songs that were played a lot in the past. \n",
-    "- `in\\_playlist`: Response variable. Categorical variable for whether in playlist of desire. 1 if in playlist, 0 if not in playlist.\n",
+    "- `in_playlist`: Response variable. Categorical variable for whether in playlist of desire. 1 if in playlist, 0 if not in playlist.\n",
     "\n",
     "The following features were recorded to help with visualization later, but not used as predictors in our analysis, as they are not characteristics of the music itself.\n",
     "- `name`: Song title\n",
     "- `artist`: First artist of song\n",
-    "- `type`: The object type: “audio\\_features”\n",
+    "- `type`: The object type: “audio_features”\n",
     "- `id`: The Spotify ID for the track.\n",
     "- `uri`: The Spotify URI for the track.\n",
-    "- `track\\_href`: A link to the Web API endpoint providing full details of the track.\n",
-    "- `analysis\\_url`: An HTTP URL to access the full audio analysis of this track. An access token is required to access this data."
+    "- `track_href`: A link to the Web API endpoint providing full details of the track.\n",
+    "- `analysis_url`: An HTTP URL to access the full audio analysis of this track. An access token is required to access this data."
    ]
   },
   {
@@ -777,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
