--- a/cs109a-Final-Project.ipynb
+++ b/cs109a-Final-Project.ipynb
@@ -467,6 +467,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'spotify_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3333d44a0da1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mmaxes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mfeature\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mspotify_df\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfeature\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"in_playlist\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mfeatures\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'spotify_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# generate summary chart of features\n",
+    "features = []\n",
+    "means = []\n",
+    "var = []\n",
+    "ranges = []\n",
+    "mins = []\n",
+    "maxes = []\n",
+    "\n",
+    "for feature in spotify_df:\n",
+    "    if feature != \"in_playlist\":\n",
+    "        features.append(feature)\n",
+    "        means.append(spotify_df[feature].mean())\n",
+    "        var.append(spotify_df[feature].var())\n",
+    "        ranges.append(spotify_df[feature].ptp())\n",
+    "        mins.append(spotify_df[feature].min())\n",
+    "        maxes.append(spotify_df[feature].max())\n",
+    "\n",
+    "summary_df = pd.DataFrame(data = {'feature': features, \n",
+    "                                  'mean': means,\n",
+    "                                  'var' : var,\n",
+    "                                  'range': ranges, \n",
+    "                                  'min': mins, \n",
+    "                                  'max': maxes}) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -677,29 +720,6 @@
     }
    ],
    "source": [
-    "# generate summary chart of features\n",
-    "features = []\n",
-    "means = []\n",
-    "var = []\n",
-    "ranges = []\n",
-    "mins = []\n",
-    "maxes = []\n",
-    "\n",
-    "for feature in spotify_df:\n",
-    "    if feature != \"in_playlist\":\n",
-    "        features.append(feature)\n",
-    "        means.append(spotify_df[feature].mean())\n",
-    "        var.append(spotify_df[feature].var())\n",
-    "        ranges.append(spotify_df[feature].ptp())\n",
-    "        mins.append(spotify_df[feature].min())\n",
-    "        maxes.append(spotify_df[feature].max())\n",
-    "\n",
-    "summary_df = pd.DataFrame(data = {'feature': features, \n",
-    "                                  'mean': means,\n",
-    "                                  'var' : var,\n",
-    "                                  'range': ranges, \n",
-    "                                  'min': mins, \n",
-    "                                  'max': maxes}) \n",
     "display(summary_df)"
    ]
   },
@@ -707,7 +727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that all features have values that are expected as per the Spotify API documentation. To analyze each feature in more granular we looked at density plots. "
+    "We can see that all features have values that are expected as per the Spotify API documentation. To analyze each feature in more granularity we looked at density plots. "
    ]
   },
   {
@@ -747,8 +767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the density plots above, we note a few things.\n",
-    "Some features that show clear differences in distribution between the playlist and non-playlist. \n",
+    "Looking at the density plots above, we note some features that show clear differences in distribution between the playlist and non-playlist. \n",
     "While non-playlist songs contain a roughly uniform distribution of energy values, playlist songs spike at an energy level between 0.2-0.4.\n",
     "Acousticness in playlist tracks is much higher on average, spiking around 0.8, while non-playlist tracks most frequently have acousticness values around 0.1.\n",
     "Instrumentalness is a particularly interesting feature. While the distribution non-playlist tracks is bimodal, peaking at around 0 and 0.9, playlist tracks have a few very well-defined peaks between 0 and 0.3. \n",
@@ -777,7 +796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
