--- a/cs109a-Final-Project.ipynb
+++ b/cs109a-Final-Project.ipynb
@@ -812,22 +812,36 @@
     }
    ],
    "source": [
+    "# set response\n",
     "response_col = 'in_playlist'\n",
+    "\n",
+    "# split into train and test\n",
     "train, test = train_test_split(spotify_df, test_size = 0.2)\n",
     "x_train, y_train = train.drop(columns=[response_col]), train[response_col]\n",
     "x_test, y_test = test.drop(columns=[response_col]), test[response_col]\n",
     "\n",
+    "# create logistic model\n",
     "log_reg_model = LogisticRegression(C=100000, fit_intercept=False)\n",
     "log_reg_model.fit(x_train, y_train)\n",
     "\n",
+    "# predict\n",
     "log_reg_train_predictions = log_reg_model.predict(x_train)\n",
     "log_reg_test_predictions = log_reg_model.predict(x_test)\n",
     "\n",
+    "# calculate scores\n",
     "log_reg_train_score = accuracy_score(y_train, log_reg_train_predictions)\n",
     "log_reg_test_score = accuracy_score(y_test, log_reg_test_predictions)\n",
     "\n",
+    "# display scores\n",
     "print('Classification accuracy for train set: {}'.format(log_reg_train_score))\n",
     "print('Classification accuracy for test set: {}'.format(log_reg_test_score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our baseline logistic model is able to achieve an accuracy of 85% in the training set, and 82% in the test set."
    ]
   },
   {
@@ -841,7 +855,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far, everything is running smoothly. We have access to the Spotify data we want, and as confirmed with Pavlos, this analysis can now be used to create the logistic and neural network models we listed in Milestone 2."
+    "So far, everything is running smoothly. We have access to the Spotify data we want, and as confirmed with Pavlos, this analysis can now be used to create the logistic and neural network models we listed in Milestone 2. Our EDA suggests that there are quite a few features that show promise of distinguishing between playlist and non-playlist songs. Our baseline model also works decently well, scoring an 82% accuracy in our test set. Next, we will build upon our baseline model. We will add in stepwise variable selection, ridge variable selection, lasso variable selection, interaction terms, and higher-degree polynomial terms. Then, we will create a neural network as an alternative method to classify playlist songs. We will then analyze the models and comment on their differences, similarities, what works, and what doesn't. Finally, we will upload everything to a website for clean reporting.\n",
+    "\n",
+    "\n",
+    "Revised question: How can we best create a model to predict which songs should be added to Person X's playlist?"
    ]
   }
  ],
@@ -861,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
