--- a/cs109a-Final-Project.ipynb
+++ b/cs109a-Final-Project.ipynb
@@ -279,7 +279,7 @@
     "spotify_df = pd.read_csv(\"data/spotify.csv\")\n",
     "\n",
     "# drop unnecessary columns\n",
-    "spotify_df = spotify_df.drop(columns=['type', 'id', 'uri', 'track_href', 'analysis_url', 'name', 'artist'])"
+    "    spotify_df = spotify_df.drop(columns=['type', 'id', 'uri', 'track_href', 'analysis_url', 'name', 'artist','Unnamed: 0'])"
    ]
   },
   {
