--- a/todo.txt
+++ b/todo.txt
@@ -27,6 +27,9 @@ maybe this means leaving some songs out of train + test?? and leaving them unlab
 and then saying it classified these!! at the end.
 
 
+we also promised pavlos a neural network, we need to include it
+get explanations for why kNN sucks
+
 TEJAL
 
 finish background motivation
